--- a/isee/src/main/java/TelaLogin.form
+++ b/isee/src/main/java/TelaLogin.form
@@ -153,7 +153,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Login :"/>
+        <Property name="text" type="java.lang.String" value="E-mail :"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
