--- a/isee/src/main/java/TelaCadastroMaquina2.form
+++ b/isee/src/main/java/TelaCadastroMaquina2.form
@@ -118,7 +118,7 @@
           <Color blue="3b" green="3b" red="3b" type="rgb"/>
         </Property>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Padr&#xe3;o"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
 
